-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0 Beta2
-
None
-
6db74d734 (dev), 658d7d7a0 (6.8)
spreadsheets example is using clipboard without checking if it's supported or not and when trying to build the example on QNX with:
C:\Utils\qnx710\qnxsdp-env.bat C:\Users\qt\RTA\Qt_6.8.0\6.8.0\qnx71_aarch64le\bin\qt-cmake -GNinja -DCMAKE_MAKE_PROGRAM=C:\Users\qt\RTA\Qt_6.8.0\Tools\Ninja\ninja -DCMAKE_BUILD_WITH_INSTALL_RPATH=on -DQT_CHAINLOAD_TOOLCHAIN_FILE=C:\Users\qt\RTA\Qt_6.8.0\6.8.0\qnx71_aarch64le\qnx-toolchain-aarch64le.cmake cmake --build . --parallel cmake --install . --prefix . --config Debug
it fails with:
-- The CXX compiler identification is QCC 8.3.0 -- Detecting CXX compiler ABI info -- Detecting CXX compiler ABI info - done -- Check for working CXX compiler: C:/Utils/qnx710/host/win64/x86_64/usr/bin/q++.exe - skipped -- Detecting CXX compile features -- Detecting CXX compile features - done -- Performing Test CMAKE_HAVE_LIBC_PTHREAD -- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success -- Found Threads: TRUE -- Performing Test HAVE_EGL -- Performing Test HAVE_EGL - Success -- Found EGL: C:/Utils/qnx710/target/qnx7/usr/include (found version "1.5") -- Performing Test HAVE_GLESv2 -- Performing Test HAVE_GLESv2 - Success -- Found GLESv2: C:/Utils/qnx710/target/qnx7/usr/include -- Found WrapVulkanHeaders: C:/Utils/qnx710/target/qnx7/usr/include -- Performing Test HAVE_STDATOMIC -- Performing Test HAVE_STDATOMIC - Success -- Found WrapAtomic: TRUE -- Configuring done (5.8s) -- Generating done (0.1s) -- Build files have been written to: C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets [1/37] Running qmlimportscanner for SpreadsheetsExample [2/37] Automatic MOC and UIC for target Spreadsheetsplugin [3/37] Automatic MOC and UIC for target Spreadsheets [4/37] Running AUTOMOC file extraction for target Spreadsheets [5/37] Running rcc for resource qmake_Spreadsheets [6/37] Generating .rcc/qmlcache/Spreadsheets_qmlcache_loader.cpp [7/37] Running rcc for resource Spreadsheets_raw_qml_0 [8/37] Running moc --collect-json for target Spreadsheets [9/37] Automatic QML type registration for target Spreadsheets [10/37] Generating .rcc/qmlcache/Spreadsheets_HelpDialog_qml.cpp, .rcc/qmlcache/Spreadsheets_HelpDialog_qml.cpp.aotstats [11/37] Generating .rcc/qmlcache/Spreadsheets_TableCell_qml.cpp, .rcc/qmlcache/Spreadsheets_TableCell_qml.cpp.aotstats [12/37] Generating .rcc/qmlcache/Spreadsheets_HeaderToolBar_qml.cpp, .rcc/qmlcache/Spreadsheets_HeaderToolBar_qml.cpp.aotstats [13/37] Generating .rcc/qmlcache/Spreadsheets_Main_qml.cpp, .rcc/qmlcache/Spreadsheets_Main_qml.cpp.aotstats [14/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/.qt/rcc/qrc_qmake_Spreadsheets.cpp.o [15/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/spreadcell.cpp.o [16/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/datamodel.cpp.o [17/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/spreadmimedataprovider.cpp.o FAILED: Spreadsheets/CMakeFiles/Spreadsheets.dir/spreadmimedataprovider.cpp.o C:\Utils\qnx710\host\win64\x86_64\usr\bin\q++.exe -Vgcc_ntoaarch64le -Wc,-isysroot,C:/Utils/qnx710//target/qnx7 -lang-c++ -DQT_CORE_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_DEBUG -DQT_OPENGL_LIB -DQT_QMLINTEGRATION_LIB -DQT_QMLMETA_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_QUICK_LIB -DSpreadsheets_EXPORTS -D_FORTIFY_SOURCE=2 -D_REENTRANT -IC:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/Spreadsheets/Spreadsheets_autogen/include -IC:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/Spreadsheets -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtQml/6.8.0 -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtQml/6.8.0/QtQml -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtCore/6.8.0 -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtCore/6.8.0/QtCore -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtCore -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/mkspecs/qnx-aarch64le-qcc -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtQml -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtQmlIntegration -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtNetwork -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtQuick -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtGui -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtQmlMeta -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtQmlModels -Wp,-isystem,C:/Users/qt/RTA/Qt_6.8.0/6.8.0/qnx71_aarch64le/include/QtOpenGL -std=gnu++17 -fPIC -Wno-invalid-offsetof -Wp,-MD,Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadmimedataprovider.cpp.o.d -Wp,-MT,Spreadsheets/CMakeFiles/Spreadsheets.dir/spreadmimedataprovider.cpp.o -Wp,-MF,Spreadsheets\CMakeFiles\Spreadsheets.dir\spreadmimedataprovider.cpp.o.d -o Spreadsheets/CMakeFiles/Spreadsheets.dir/spreadmimedataprovider.cpp.o -c C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/Spreadsheets/spreadmimedataprovider.cpp C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/Spreadsheets/spreadmimedataprovider.cpp: In member function 'bool SpreadMimeDataProvider::saveToClipboard()': C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/Spreadsheets/spreadmimedataprovider.cpp:61:22: error: 'clipboard' is not a member of 'QGuiApplication' QGuiApplication::clipboard()->setMimeData(mime_data); ^~~~~~~~~ C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/Spreadsheets/spreadmimedataprovider.cpp: In member function 'bool SpreadMimeDataProvider::loadFromClipboard()': C:/Users/qt/RTA/Qt_6.8.0/Examples/Qt-6.8.0/quickcontrols/spreadsheets/Spreadsheets/spreadmimedataprovider.cpp:67:51: error: 'clipboard' is not a member of 'QGuiApplication' const QMimeData *mime_data = QGuiApplication::clipboard()->mimeData(); ^~~~~~~~~ cc: C:/Utils/qnx710//host/win64/x86_64/usr/lib/gcc/aarch64-unknown-nto-qnx7.1.0/8.3.0/cc1plus caught signal 1 [18/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/spreadformula.cpp.o [19/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/spreadsheets_qmltyperegistrations.cpp.o [20/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/Spreadsheets_autogen/mocs_compilation.cpp.o [21/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/.rcc/qmlcache/Spreadsheets_qmlcache_loader.cpp.o [22/37] Building CXX object Spreadsheets/CMakeFiles/Spreadsheets.dir/spreadmodel.cpp.o ninja: build stopped: subcommand failed.
For Gerrit Dashboard: QTBUG-127273 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
578338,2 | Spreadsheets Example: Check if clipboard is supported | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
578377,2 | Spreadsheets Example: Check if clipboard is supported | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |