Spreadsheets Example: Check if clipboard is supported

The Spreadsheets example does not build on QNX as it uses the clipboard,
which is not supported on QNX.

To fix this issue, it checks `QT_NO_CLIPBOARD` macro around the
clipboard usage and prints a warning if it is not supported.

Fixes: QTBUG-127273
Change-Id: Ib677ecd79c216f4e7dde20d82875ee3f492a21ea
Reviewed-by: Santhosh Kumar <santhosh.kumar.selvaraj@qt.io>
(cherry picked from commit 6db74d734093734be44ffd14d26fd32a2cc9c03a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>